// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`router paths should call all the callbacks for each route 1`] = `
Array [
  Array [
    Object {
      "url": "/fooga",
    },
    [Function],
  ],
  Array [
    Object {
      "url": "/fooga",
    },
    [Function],
  ],
  Array [
    Object {
      "url": "/fooga",
    },
    [Function],
  ],
]
`;

exports[`router paths should match nested routes 1`] = `
Array [
  Array [
    Object {
      "url": "/fooga/booga",
    },
    [Function],
  ],
]
`;

exports[`router paths should match simple routes 1`] = `
Array [
  Array [
    Object {
      "url": "/fooga",
    },
    [Function],
  ],
]
`;

exports[`router paths should register routes 1`] = `
Object {
  "fooga": Object {
    "fns": Array [
      [MockFunction],
    ],
  },
}
`;

exports[`router paths should register routes w/ multiple callbacks 1`] = `
Object {
  "fooga": Object {
    "fns": Array [
      [MockFunction],
      [MockFunction],
      [MockFunction],
    ],
  },
}
`;

exports[`router paths should stop at the right time 1`] = `
Array [
  Array [
    Object {
      "url": "/fooga",
    },
    [Function],
  ],
]
`;
